[NEW] Migration with add column

--- a/MigrationsRepository/MigrationsRepository.csproj
+++ b/MigrationsRepository/MigrationsRepository.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Migration1Users.cs" />
+    <Compile Include="Migration2AddDateToUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
